Changing some spacing and resizing stuff, and added small animations

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="medium-12 column" id="projects-container">
         <h1>Hello!</h1>
         <p>I try to make cool things from time to time</p>
-        <div class="medium-12 column" id="project-row" >
+        <div class="large-8 medium-12 row" id="project-row" >
           <a class="medium-3 column project" href="#">
             <i data-feather="radio"></i>
             <h6 class="project-title">Reach Podcast Player</h6>
@@ -50,7 +50,7 @@
           </a>
         </div>
         <!--Terrible Idead Here-->
-        <div class="medium-12 column" id="project-row" >
+        <div class="large-8 medium-12 row" id="project-row" >
           <a class="medium-3 column project" href="#">
             <i data-feather="eye"></i>
             <h6 class="project-title">Enhancement Suite</h6>
