Responsiveness is hard :/

--- a/index.html
+++ b/index.html
@@ -24,49 +24,49 @@
           </ul>
         </nav>
       </header>
-      <div class="medium-12 column" id="projects-container">
+      <div class="small-12 large-12 column" id="projects-container">
         <h1>Hello!</h1>
         <p>I try to make cool things from time to time</p>
-        <div class="large-8 medium-12 row" id="project-row" >
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Reach-Podcast-Player">
+        <div class="small-12 medium-12 large-8 row" id="project-row" >
+          <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/Reach-Podcast-Player">
             <i data-feather="radio"></i>
             <h6 class="project-title">Reach Podcast Player</h6>
             <p class="project-description">This is a rss-based podcast player made in electron and angular!</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Slayer">
+          <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/Slayer">
             <i data-feather="zap"></i>
             <h6 class="project-title">Slayer</h6>
             <p class="project-description">Twitter game where you get together with up to 10 strangers and fight a boss!</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/OdysseySMS-Desktop-">
+          <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/OdysseySMS-Desktop-">
             <i data-feather="smartphone"></i>
             <h6 class="project-title">Odyssey/Illiad SMS</h6>
             <p class="project-description">Desktop application that works with IliadSMS(Android Client), allowing me to text from desktop</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Dashboard">
+          <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/Dashboard">
             <i data-feather="tv"></i>
             <h6 class="project-title">Dashboard</h6>
             <p class="project-description">A dashboard-esque display that is on my TV that runs on a raspberry pi</p>
           </a>
         </div>
         <!--Terrible Idead Here-->
-        <div class="large-8 medium-12 row" id="project-row" >
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Enhancement-Suite">
+        <div class="small-12 medium-12 large-8 row" id="project-row" >
+          <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/Enhancement-Suite">
             <i data-feather="eye"></i>
             <h6 class="project-title">Enhancement Suite</h6>
             <p class="project-description">Stopping bullying and harrasment is hard, so we got parents to help us out (Hackathon Entry)</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Maze-Solving-and-Generating">
+          <a class="small-12  large-3 column project" href="https://github.com/SolarFloss/Maze-Solving-and-Generating">
             <i data-feather="compass"></i>
             <h6 class="project-title">Maze Generator/Solver</h6>
             <p class="project-description">Generates and solves mazes using DFS and Randomized Prim's Algorithm</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/Chat-Room">
+          <a class="small-12  large-3 column project" href="https://github.com/SolarFloss/Chat-Room">
             <i data-feather="message-square"></i>
             <h6 class="project-title">Java Chatroom Client</h6>
             <p class="project-description">Basic chatroom client that allows users to talk over a shared directory</p>
           </a>
-          <a class="medium-3 column project" href="https://github.com/SolarFloss/My-Two-Cents">
+          <a class="small-12  large-3 column project" href="https://github.com/SolarFloss/My-Two-Cents">
             <i data-feather="shopping-cart"></i>
             <h6 class="project-title">My Two Cents</h6>
             <p class="project-description">An app that can earn ~$0.02 a day in bitcoin <i>if it's left running 24/7 :P</i></p>
