I still don't know what I'm doing :/

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <p>I try to make cool things from time to time</p>
         <div class="small-12 medium-12 large-8 row" id="project-row" >
           <a class="small-12 large-3 column project" href="https://github.com/SolarFloss/Reach-Podcast-Player">
-            <i data-feather="radio"></i>
+            <i class="icon" data-feather="radio">f</i>
             <h6 class="project-title">Reach Podcast Player</h6>
             <p class="project-description">This is a rss-based podcast player made in electron and angular!</p>
           </a>
