quick quick changes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!--Scripts-->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.5/angular-animate.min.js"></script>
     <script type="text/javascript" src="scripts/main-script.js"></script>
     <script type="text/javascript" src="scripts/controllers/request-controller.js"></script>
 
@@ -21,12 +22,12 @@
   </head>
   <body id="main-container" ng-app="main-app">
     <header class="large-12 medium-12 row expanded" id="header" ng-app="header-controller">
-      <div class="large-5 medium-6 small-10 column rows">
+      <div class="large-5 medium-5 small-10 column rows">
         <span id="title">
           <a href="#">Make Someone's Day</a>
         </span>
       </div>
-      <nav class="medium-6 small-4 column" id="nav-bar">
+      <nav class="medium-7 small-4 column" id="nav-bar">
         <ul>
           <li><a href="#"><i data-feather="help-circle"></i>About</a></li>
           <li><a href="#"><i data-feather="plus"></i>Request</a></li>
