--- a/index.html
+++ b/index.html
@@ -14,32 +14,40 @@
         <div class="main-wrapper">
             <div class="top-row-wrapper">
                 <div class="project-wrapper">
-                    <div class="project-info">
-                        <i class="icon" data-feather="radio"></i>
-                        <p>Reach Podcast Player</p>
-                        <p>This is a rss-based podcast player made in electron and angular!</p>
-                    </div>
-                </div>
-                <div class="project-wrapper">
-                    <div class="project-info">
-                        <i class="icon" data-feather="zap"></i>
-                        <p>Slayer</p>
-                        <p>Twitter game where you get together with up to 10 strangers and fight a boss!</p>
-                    </div>
-                </div>
-                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Reach-Podcast-Player">
                         <div class="project-info">
-                                <i class="icon" data-feather="smartphone"></i>
-                                <p>Odyssey/Illiad SMS</p>
-                                <p>Application that works with IlliadSMS(Android) to text from my pc</p>
-                            </div>
+                            <i class="icon" data-feather="radio"></i>
+                            <p>Reach Podcast Player</p>
+                            <p>This is a rss-based podcast player made in electron and angular!</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Slayer">
                         <div class="project-info">
-                                <i class="icon" data-feather="tv"></i>
-                                <p>Dashboard</p>
-                                <p>A dashboard-esque display that is on my TV that runs on a raspberry pi</p>
-                            </div>
+                            <i class="icon" data-feather="zap"></i>
+                            <p>Slayer</p>
+                            <p>Twitter game where you get together with up to 10 strangers and fight a boss!</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/OdysseySMS-Desktop-">
+                        <div class="project-info">
+                             <i class="icon" data-feather="smartphone"></i>
+                            <p>Odyssey/Illiad SMS</p>
+                             <p>Application that works with IlliadSMS(Android) to text from my pc</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Dashboard">
+                        <div class="project-info">
+                            <i class="icon" data-feather="tv"></i>
+                            <p>Dashboard</p>
+                            <p>A dashboard-esque display that is on my TV that runs on a raspberry pi</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="middle-row-wrapper">
@@ -55,32 +63,40 @@
             </div>
             <div class="bottom-row-wrapper">
                 <div class="project-wrapper">
-                    <div class="project-info">
-                        <i class="icon" data-feather="radio"></i>
-                        <p>Enhancement Suite</p>
-                        <p>Stopping bullying and harrasment is hard, so we got parents to help us out(Hackathon)</p>
-                    </div>
-                </div>
-                <div class="project-wrapper">
-                    <div class="project-info">
-                        <i class="icon" data-feather="zap"></i>
-                        <p>Maze Generator/Solver</p>
-                        <p>Generates and solves mazes using DFS and Randomized Prim's Algorithm</p>
-                    </div>
-                </div>
-                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Enhancement-Suite">
                         <div class="project-info">
-                                <i class="icon" data-feather="smartphone"></i>
-                                <p>Java Chatroom Client</p>
-                                <p>Basic chatroom client that allows users to talk over a shared directory</p>
-                            </div>
+                            <i class="icon" data-feather="eye"></i>
+                            <p>Enhancement Suite</p>
+                            <p>Stopping bullying and harrasment is hard, so we got parents to help us out(TribeHacks)</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Maze-Solving-and-Generating">
                         <div class="project-info">
-                                <i class="icon" data-feather="tv"></i>
-                                <p>My Two Cents</p>
-                                <p>An app that can earn ~$0.02 a day in bitcoin if it's left running 24/7 :P</p>
-                            </div>
+                            <i class="icon" data-feather="compass"></i>
+                            <p>Maze Generator/Solver</p>
+                            <p>Generates and solves mazes using DFS and Randomized Prim's Algorithm</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/Chat-Room">
+                        <div class="project-info">
+                            <i class="icon" data-feather="message-square"></i>
+                            <p>Java Chatroom Client</p>
+                            <p>Basic chatroom client that allows users to talk over a shared directory</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="project-wrapper">
+                    <a href="https://github.com/SolarFloss/My-Two-Cents">
+                        <div class="project-info">
+                            <i class="icon" data-feather="shopping-cart"></i>
+                            <p>My Two Cents</p>
+                            <p>An app that can earn ~$0.02 a day in bitcoin if it's left running 24/7 :P</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
