color and transitions

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Welcome!</title>
         <link rel="stylesheet" href="css/main-style.css">
         <link href="https://fonts.googleapis.com/css?family=Reem+Kufi" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
         <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
         
         
@@ -27,7 +28,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="zap"></i>
                             <p>Slayer</p>
-                            <p>Twitter game where you get together with up to 10 strangers and fight a boss!</p>
+                            <p>Twitter game where you play with up to 10 strangers and fight a boss!</p>
                         </div>
                     </a>
                 </div>
@@ -52,13 +53,13 @@
             </div>
             <div class="middle-row-wrapper">
                 <div class="about-wrapper">
-                    <a href="#"><span>ABOUT</span></a>
+                    <a href="#" class="side-button"><span>ABOUT</span></a>
                 </div>
                 <div class="name-wrapper">
                     <a href="#"><span>MORRIS</span></a>
                 </div>
                 <div class="blog-wrapper">
-                    <a href="#"><span>BLOG</span></a>
+                    <a href="#" class="side-button"><span>BLOG</span></a>
                 </div>
             </div>
             <div class="bottom-row-wrapper">
@@ -67,7 +68,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="eye"></i>
                             <p>Enhancement Suite</p>
-                            <p>Stopping bullying and harrasment is hard, so we got parents to help us out(TribeHacks)</p>
+                            <p>Stopping bullying is hard, so we got parents to help us out(TribeHacks)</p>
                         </div>
                     </a>
                 </div>
