--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <a href="#"><span>MORRIS</span></a>
                 </div>
                 <div class="blog-wrapper">
-                    <a href="#" class="side-button"><span>BLOG</span></a>
+                    <a href="/blog" class="side-button"><span>BLOG</span></a>
                 </div>
             </div>
             <div class="bottom-row-wrapper">
