--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <a href="#" class="side-button"><span>ABOUT</span></a>
                 </div>
                 <div class="name-wrapper">
-                    <a href="#"><span>MORRIS</span></a>
+                    <a href="/"><span>MORRIS</span></a>
                 </div>
                 <div class="blog-wrapper">
                     <a href="/blog" class="side-button"><span>BLOG</span></a>
