--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="middle-row-wrapper">
                 <div class="about-wrapper">
-                    <a href="#" class="side-button"><span>ABOUT</span></a>
+                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="side-button"><span>ABOUT</span></a>
                 </div>
                 <div class="name-wrapper">
                     <a href="/"><span>MORRIS</span></a>
