--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="radio"></i>
                             <p>Reach Podcast Player</p>
-                            <p>This is a rss-based podcast player made in electron and angular!</p>
+                            <p>An rss-based podcast player made in electron and angular!</p>
                         </div>
                     </a>
                 </div>
@@ -28,7 +28,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="zap"></i>
                             <p>Slayer</p>
-                            <p>Twitter game where you play with up to 10 strangers and fight a boss!</p>
+                            <p>A twitter game where you play with up to 10 strangers and fight a boss!</p>
                         </div>
                     </a>
                 </div>
@@ -37,7 +37,7 @@
                         <div class="project-info">
                              <i class="icon" data-feather="smartphone"></i>
                             <p>Odyssey/Illiad SMS</p>
-                             <p>Application that works with IlliadSMS(Android) to text from my pc</p>
+                             <p>An Application that works with IlliadSMS(Android) to text from my pc</p>
                         </div>
                     </a>
                 </div>
@@ -77,7 +77,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="compass"></i>
                             <p>Maze Generator/Solver</p>
-                            <p>Generates and solves mazes using DFS and Randomized Prim's Algorithm</p>
+                            <p>An application that generates/solves mazes using DFS and Prim's Algorithm</p>
                         </div>
                     </a>
                 </div>
@@ -86,7 +86,7 @@
                         <div class="project-info">
                             <i class="icon" data-feather="message-square"></i>
                             <p>Java Chatroom Client</p>
-                            <p>Basic chatroom client that allows users to talk over a shared directory</p>
+                            <p>A basic chatroom client that allows users to talk over a shared directory</p>
                         </div>
                     </a>
                 </div>
