--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" href="css/main-style.css">
         <link href="https://fonts.googleapis.com/css?family=Reem+Kufi" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
-        
+        <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
+        <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
         
     </head>
     <body>
