--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="css/main-style.css">
         <link href="https://fonts.googleapis.com/css?family=Reem+Kufi" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Varela" rel="stylesheet">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width">
         <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
         <link rel="icon" type="image/png" href="/images/favicons/favicon-16x16.png" sizes="16x16">
         <link rel="icon" type="image/png" href="/images/favicons/favicon-32x32.png" sizes="32x32">
@@ -26,7 +26,7 @@
                 <a href="https://twitter.com/Nickels_7"><i class="icon-right" data-feather="twitter"></i></a>
                 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">ABOUT</a>
                 <a href="/blog">BLOG</a>
-                <a href="github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>
+                <a href="https://github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>
             </div>
 
             <div class="projects-row-wrapper resize">
@@ -150,8 +150,8 @@
                 <a class="icon-wrapper github resize" href="#"><i class="icon-right" data-feather="github"></i></a>
                 <div class="name-wrapper">
                     <a href="/" class="name"><span>MORRIS</span></a> 
-                    <a class="icon-wrapper twitter" href="twitter.com/Nickels_7"><i class="icon-right" data-feather="twitter"></i></a>
-                    <a class="icon-wrapper github" href="github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>   
+                    <a class="icon-wrapper twitter" href="https://twitter.com/Nickels_7"><i class="icon-right" data-feather="twitter"></i></a>
+                    <a class="icon-wrapper github" href="https://github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>   
                 </div>
                 
                 <div class="blog-wrapper">
