--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <div class="links-row-wrapper resize">
                 <a href="https://twitter.com/Nickels_7"><i class="icon-right" data-feather="twitter"></i></a>
-                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">ABOUT</a>
+                <a href="/about">ABOUT</a>
                 <a href="/blog">BLOG</a>
                 <a href="https://github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>
             </div>
