link to about page. Really this time

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             
             <div class="links-row-wrapper resize">
                 <a href="https://twitter.com/Nickels_7"><i class="icon-right" data-feather="twitter"></i></a>
-                <a href="/about">ABOUT</a>
+                <a href="/blog/all-about-me">ABOUT</a>
                 <a href="/blog">BLOG</a>
                 <a href="https://github.com/Solarfloss"><i class="icon-right" data-feather="github"></i></a>
             </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="middle-row-wrapper row">
                 <div class="about-wrapper">
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="side-button"><span>ABOUT</span></a>
+                    <a href="/blog/all-about-me" class="side-button"><span>ABOUT</span></a>
                 </div>
                 <a class="icon-wrapper twitter resize" href="#"><i class="icon-right" data-feather="twitter"></i></a>
                 <a class="icon-wrapper github resize" href="#"><i class="icon-right" data-feather="github"></i></a>
